--- a/structure_216271.html
+++ b/structure_216271.html
@@ -23,14 +23,14 @@
       content="This page contains Gaussian Elimination Calculator to solve all type and find inverse."
     />
     <title>Gaussian Elimination Calculate System</title>
-    <link rel="icon" href="gambar/accounting.png" type="image/x-icon" />
+    <link rel="icon" href="accounting.png" type="image/x-icon" />
     <link rel="stylesheet" href="style_216271.css" />
   </head>
   <body>
     <nav>
       <div class="logo">
         <img
-          src="gambar/upm-new-logo-6911DC0B99-seeklogo.com.png"
+          src="upm-new-logo-6911DC0B99-seeklogo.com.png"
           alt="upm logo"
           title="UPM logo"
           width="240"
@@ -38,7 +38,7 @@
         />
 
         <img
-          src="gambar/logoCSITnoBackground.png"
+          src="logoCSITnoBackground.png"
           alt="FSKTM logo"
           title="FSKTM UPM Logo"
           width="240"
